# ax-agent-studio

./: .env.example  .gitignore  .mcp.json.example  .pre-commit-config.yaml  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CLA.md  CLAUDE.md  CONTRIBUTING.md  COOL_DISCOVERIES.md  DEMO.md  Dockerfile  FAILED_Pull-Request-34_Results  FRAMEWORKS.md  HANDOFF_PR10_CLAUDE_SDK.md  HANDOFF_SESSION.md  ISSUE_triple_backtick_truncation.md  LICENSE  README.md  SESSION_HANDOFF.md  TESTING.md  TESTING_GUIDE.md  config.yaml  config.yaml.example  package.json  pr_body.txt  pyproject.toml  test_openai_message.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cla.yml  diagnostics.yml  pr-fast.yml
agent_files/: README.md
configs/: deployment_groups.example.yaml  frameworks.yaml  providers.yaml
configs/agents/: _example_agent.json  _example_claude_agent_sdk.json
configs/prompts/: README.md  _base.yaml  _example_prompt.yaml  code_reviewer.yaml  collaborative_agent.yaml  creative_writer.yaml  data_analyst.yaml  default.yaml  project_manager.yaml  research_assistant.yaml
docs/: AGENT_FRAMEWORK_ARCHITECTURE.md
framework-guides/: README.md  claude-agent-sdk.md  echo.md  langgraph.md  ollama.md  openai-agents-sdk.md
investigations/: gcp_wait_investigation.py  heartbeat_investigation.py  timeout_options_investigation.py  wait_without_ping_investigation.py
scripts/: cleanup_cloud_run_revisions.py  debug_mcp.py  dev-setup.ps1  diagnose_env.ps1  diagnose_env.py  diagnose_env.sh  generate_framework_list.py  kill_switch.py  lint_check.sh  mcp_mock.py  register_agents.py  remove_emojis.py  start_dashboard.bat  start_dashboard.py  start_dashboard.sh  test_local.sh  validate_configs.py  verify_deployment.py
signatures/: cla.json
src/ax_agent_studio/: config.py  conversation_memory.py  framework_validator.py  llm_factory.py  mcp_heartbeat.py  mcp_manager.py  message_store.py  queue_manager.py
src/ax_agent_studio/auth/: __init__.py  oauth_manager.py  token_validator.py
src/ax_agent_studio/dashboard/backend/: changelog_manager.py  config_loader.py  deployment_loader.py  framework_loader.py  log_streamer.py  main.py  process_manager.py  providers_loader.py
src/ax_agent_studio/dashboard/frontend/: app.js  index.html  style.css
src/ax_agent_studio/demos/: round_robin.py  scrum_team.py
src/ax_agent_studio/mcp_servers/: browser_server.py  crm_server.py  viasocket_server.py
src/ax_agent_studio/monitors/: claude_agent_sdk_monitor.py  echo_monitor.py  langgraph_monitor.py  ollama_monitor.py  openai_agents_monitor.py
tasks/: CONVERSATION_MEMORY_ARCHITECTURE.md  MEMORY_BOOST_FEATURE.md
tests/: E2E_TEST_PLAN.md  PING_PONG_INVESTIGATION.md  README.md  TEST_PLAN.md  run_all_tests.sh  test-basic-message-exchange.js  test-done-command.js  test-message-flow-validation.js  test-message-storm-coordination.js  test_agent_conversation.py  test_agent_handler.py  test_agent_name_independence_e2e.py  test_all_frameworks_e2e.py  test_all_monitors_e2e.py  test_claude_agent_sdk_monitor.py  test_dashboard_api_e2e.py  test_dashboard_deployment_e2e.py  test_dashboard_framework_config_e2e.py  test_dashboard_ui_e2e.py  test_done_message_clearing.py  test_duplicate_agent_prevention.py  test_e2e_dashboard_automation.py  test_filo_batching.py  test_gemini_e2e.py  test_gemini_monitor_e2e.py  test_message_parsing.py  test_message_store.py  test_multi_agent_context.py  test_no_emojis.py  test_ollama_models.py  test_openai_agents_monitor_e2e.py  test_pause_auto_resume.py  test_providers_e2e.py  test_queue_manager_smoke.py  test_utf8_log_handling.py  verify_swarm.py
tests/archived/: test-batch-processing.js  test-hybrid-message-board.js  test-simple-echo.js
tests/e2e/: README.md  pre_commit_wrapper.py  send_burst_messages.js  send_multi_agent_conversation.js  test-01-echo-deployment.js  test-agent-introductions.js  test-simple-deployments.py  test_01_agent_connectivity.py  test_02_echo_all_agents.py  test_02_monitor_validation.py  test_03_ollama.py  test_04_ollama_crisscross.py  test_05_four_way_conversation.py  test_06_ollama_smoke.py  test_07_claude_sdk.py  test_08_openai_sdk.py  test_09_langgraph.py  test_all_agent_types.py  test_all_agent_types_v2.py  test_config.py  test_ui_api_wiring.py  validate-agent-response.js
tests/e2e/helpers/: __init__.py  dashboard_api.py
tests/stability/: load_test.py
