[project]
name = "ax-agent-studio"
version = "1.0.0"
description = "The Agent Factory - Build autonomous AI agents using MCP for orchestration"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "aX Platform", email = "jacob.taunton@ax-platform.com"}
]
keywords = ["mcp", "agents", "ai", "orchestration", "langgraph", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "langgraph>=0.1.0",
    "pyyaml>=6.0.0",
    "langchain-aws>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-mcp-adapters>=0.1.11",
    "claude-agent-sdk>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ax-platform/ax-agent-studio"
Documentation = "https://github.com/ax-platform/ax-agent-studio/blob/main/README.md"
Repository = "https://github.com/ax-platform/ax-agent-studio"
Issues = "https://github.com/ax-platform/ax-agent-studio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
