[project]
name = "ax-agent-studio"
version = "1.0.0"
description = "The Agent Factory - Build autonomous AI agents using MCP for orchestration"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "aX Platform", email = "jacob.taunton@ax-platform.com"}
]
keywords = ["mcp", "agents", "ai", "orchestration", "langgraph", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "psutil>=5.9.0",
    "aiofiles>=24.1.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "openai-agents>=0.1.0",
    "langgraph>=0.1.0",
    "pyyaml>=6.0.0",
    "langchain-aws>=1.0.0",
    "langchain-google-genai>=3.0.0",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.1",
    "langchain-mcp-adapters>=0.1.11",
    "claude-agent-sdk>=0.1.5",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=4.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "bandit[toml]>=1.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "playwright>=1.48.0",
    "types-pyyaml>=6.0.0",
    "types-aiofiles>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/ax-platform/ax-agent-studio"
Documentation = "https://github.com/ax-platform/ax-agent-studio/blob/main/README.md"
Repository = "https://github.com/ax-platform/ax-agent-studio"
Issues = "https://github.com/ax-platform/ax-agent-studio/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "*.pyc",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "E402",   # Module level import not at top - tests need special imports
    "E712",   # Comparison to True/False - tests use explicit comparisons
    "F401",   # Unused import - will clean up later
    "F841",   # Unused variable - will clean up later
    "F811",   # Redefinition of unused variable - will clean up later
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "S101"]  # Allow assert and unused args in tests
"scripts/*" = ["T201"]        # Allow print() in scripts

[tool.ruff.lint.isort]
known-first-party = ["ax_agent_studio"]

# Mypy configuration
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, can tighten later
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "venv",
    ".venv",
    "tests",
    "scripts",
]

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101"]  # Allow assert statements

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
markers = [
    "e2e: End-to-end tests requiring dashboard",
    "unit: Unit tests",
    "integration: Integration tests",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
